--- a/src/components/authPopup.css
+++ b/src/components/authPopup.css
@@ -19,11 +19,11 @@ body {
 }
 
 .auth-popup {
-  background: black; /* Nền của pop-up là màu đen */
+  background: rgba(0, 0, 0, 0.9); /* Nền của pop-up là màu đen với độ mờ */
   border-radius: 8px;
   padding: 20px;
   width: 400px; /* Chiều rộng của pop-up */
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
   color: white; /* Màu chữ trong pop-up */
 }
 
@@ -45,7 +45,7 @@ h2 {
 .input-icon {
   position: absolute;
   left: 10px; /* Đặt vị trí của icon */
-  color: black; /* Màu icon là trắng */
+  color: white; /* Màu icon là trắng */
   margin-top: 1rem;
 }
 
@@ -54,10 +54,16 @@ input {
   font-size: 16px;
   width: calc(100% - 40px); /* Đặt chiều rộng của input với khoảng cách cho icon */
   padding: 10px 10px 10px 30px; /* Padding cho input để có khoảng cách với icon */
-  border: 1px solid #ccc; /* Đường viền cho input */
+  border: 1px solid #5ab9ec; /* Đường viền cho input */
   border-radius: 4px; /* Bo tròn góc cho input */
   background-color: white; /* Nền của input là màu trắng */
   color: black; /* Màu chữ trong input */
+  transition: border-color 0.3s; /* Hiệu ứng chuyển tiếp cho viền input */
+}
+
+input:focus {
+  border-color: #5ab9ec; /* Màu viền khi input được chọn */
+  outline: none; /* Bỏ viền mặc định */
 }
 
 input::placeholder {
@@ -70,7 +76,6 @@ input::placeholder {
   right: 10px; /* Đặt vị trí cho icon mắt */
   color: black; /* Màu icon mắt là trắng */
   margin-top: 1rem;
-
 }
 
 button {
@@ -83,9 +88,12 @@ button {
   border-radius: 20px; /* Bo tròn góc cho nút */
   cursor: pointer; /* Đổi con trỏ khi hover */
   margin-top: 10px; /* Khoảng cách trên nút */
+  transition: background-color 0.3s; /* Hiệu ứng chuyển tiếp cho nút */
 }
 
-
+button:hover {
+  background-color: #f0f0f0; /* Màu nền khi hover */
+}
 
 .toggle-link {
   color: #5ab9ec; /* Màu chữ cho liên kết */
