--- a/frontend/src/components/products.css
+++ b/frontend/src/components/products.css
@@ -1,7 +1,6 @@
-/* Đảm bảo sản phẩm được hiển thị theo dạng lưới, mỗi dòng chứa 3 sản phẩm */
 .products-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Mỗi dòng chứa 3 sản phẩm */
+    grid-template-columns: repeat(4, 1fr); /* Mỗi dòng chứa 4 sản phẩm */
     gap: 20px; /* Khoảng cách giữa các sản phẩm */
     padding: 20px;
     justify-items: center; /* Căn giữa nội dung */
@@ -84,6 +83,7 @@
     top: 0;
     left: 0;
     right: 0;
+    margin-top: 30px;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5); /* Nền tối */
     display: flex;
@@ -99,33 +99,47 @@
     text-align: center;
     max-width: 400px;
     width: 90%; /* Chiều rộng tối đa */
+    position: relative; 
 }
-
+    .close {
+    position: absolute;
+    top: 30px; /* Khoảng cách từ trên */
+    right: 30px; /* Khoảng cách từ bên phải */
+    border: none;
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: #f44336; /* Màu đỏ khi hover */
+  }
 .popup-content img {
     width: 100%; /* Hình ảnh chiếm toàn bộ chiều rộng */
     height: auto; /* Giữ tỷ lệ hình ảnh */
 }
 
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 24px;
-  }
-
-.close:hover {
-    color: black; /* Thay đổi màu khi hover */
-}
-
 .popup-buttons {
     margin-top: 15px;
 }
-
+.popup-buttons close {
+    position: absolute;
+    top: 10px; /* Khoảng cách từ trên */
+    right: 10px; /* Khoảng cách từ bên phải */
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+  }
+  
+  .popup-buttons close:hover {
+    color: #f44336; /* Màu đỏ khi hover */
+  }
 .popup-buttons button {
     margin: 5px;
     padding: 10px 15px;
-    background-color: #007bff;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -133,7 +147,7 @@
 }
 
 .popup-buttons button:hover {
-    background-color: #0056b3; /* Thay đổi màu khi hover */
+    background-color: #2e343b; /* Thay đổi màu khi hover */
 }
 
 /* Chọn kích thước */
